Fixed a few bugs in app loading/complaint printing

--- a/PurdueCardsFrontend/src/app/app.component.html
+++ b/PurdueCardsFrontend/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div *ngFor="let card of cards">
   <div>{{card.name}}</div>
-  <div>{{complaint.body}}</div>
+</div>
+<div *ngFor="let complaint of complaints">
+ <div>{{complaint.body}}</div>
 </div>
