--- a/PurdueCardsFrontend/src/app/app.component.html
+++ b/PurdueCardsFrontend/src/app/app.component.html
@@ -1,6 +1,14 @@
+<!--
 <div *ngFor="let card of cards">
   <div>{{card.name}}</div>
 </div>
 <div *ngFor="let complaint of complaints">
  <div>{{complaint.body}}</div>
 </div>
+-->
+
+<nav>
+  <a class= "button" routerLink="/complaint" routerLinkActive="active" ariaCurrentWhenActive="page">Make Complaint</a>
+
+</nav>
+<router-outlet> </router-outlet>
