Added add card and generate all cards in inventory functions

--- a/PurdueCardsFrontend/src/app/app.component.html
+++ b/PurdueCardsFrontend/src/app/app.component.html
@@ -5,6 +5,9 @@
       <li> <a routerLink="/sale" routerLinkActive="active" ariaCurrentWhenActive="page">Make a sale</a></li>
       <li> <a class= "button" routerLink="/complaint" routerLinkActive="active" ariaCurrentWhenActive="page">Make a Complaint</a></li>
       <li> <a class= "button" routerLink="/complaint-all" routerLinkActive="active" ariaCurrentWhenActive="page">Generate all Complaints</a></li>
+      <li> <a class= "button" routerLink="/card" routerLinkActive="active" ariaCurrentWhenActive="page">Add a card</a></li>
+      <li> <a class= "button" routerLink="/card-all" routerLinkActive="active" ariaCurrentWhenActive="page">Generate all Cards</a></li>
+
   </ul>
 
 </nav>
